--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-    window.location.href = 'Upload/transition.aac';
+    window.location.href = 'transition.aac';
 });
 </script>
 </head>
