--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <img src="EDCLogo.png" alt="HDAK" style="width:100%"/>
     <p>please wait</p>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-    window.location.href = 'transition.aac';
+    window.location.href = 'Igitondocyumuzuko20200510150219.mp3';
 });
 </script>
 </head>
