--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <img src="EDCLogo.png" alt="HDAK" style="width:100%"/>
-    <p>please wait</p>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script>
-$(document).ready(function(){
-    window.location.href = 'Igitondocyumuzuko20200510150219.mp3';
-});
-</script>
 </head>
 <body>
+    <img src="EDCLogo.png" alt="HDAK" style="width:100%"/>
+    <p>please wait</p>
+    
+    <script>
+       $(document).ready(function(){
+           window.location.href = 'Igitondocyumuzuko20200510150219.mp3';
+        });
+    </script>
+</body>
+</html>
