--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <script>
        $(document).ready(function(){
-           window.location.href = 'Igitondocyumuzuko20200510150219.mp3';
+           window.location.href = 'transition.aac';
         });
     </script>
 </body>
