--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
-    <img src="EDCLogo.png" alt="HDAK" style="width:50%"/>
-    <br><br><br><br>
+    <div style="width:100%; display: inline-block; position: relative;">
+    <img src="EDCLogo.png" alt="HDAK" style="width:30%; float: left;"/>
+    <img src="usaid.jpeg" alt="HDAK" style="width:45%; float: right;"/>
+    </div>
+
+    <div style="width:100%;">
+        <center><h1><b>HDAK PROJECT</b></h1></center>
     <center><h1>Interactive Audio Instruction</h1></center>
 
     <center><img src="processing.gif" alt="HDAK" style="width:50%"/></center>
@@ -22,7 +27,7 @@
     
     <script>
        $(document).ready(function(){
-           window.location.href = 'transition.aac';
+           window.location.href = 'hdakwrn.ac3';
         });
     </script>
 </body>
